--- a/Content/bootstrap-reboot.css
+++ b/Content/bootstrap-reboot.css
@@ -479,7 +479,7 @@ select:disabled {
 }
 
 [list]:not([type=date]):not([type=datetime-local]):not([type=month]):not([type=week]):not([type=time])::-webkit-calendar-picker-indicator {
-  display: none !important;
+  display: none ;
 }
 
 button,
@@ -591,7 +591,7 @@ progress {
 }
 
 [hidden] {
-  display: none !important;
+  display: none ;
 }
 
 /*# sourceMappingURL=bootstrap-reboot.css.map */
