--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -196,11 +196,11 @@ th {
   *,
   *:before,
   *:after {
-    color: #000 !important;
-    text-shadow: none !important;
-    background: transparent !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
+    color: #000 ;
+    text-shadow: none ;
+    background: transparent ;
+    -webkit-box-shadow: none ;
+    box-shadow: none ;
   }
   a,
   a:visited {
@@ -229,7 +229,7 @@ th {
     page-break-inside: avoid;
   }
   img {
-    max-width: 100% !important;
+    max-width: 100% ;
   }
   p,
   h2,
@@ -246,21 +246,21 @@ th {
   }
   .btn > .caret,
   .dropup > .btn > .caret {
-    border-top-color: #000 !important;
+    border-top-color: #000 ;
   }
   .label {
     border: 1px solid #000;
   }
   .table {
-    border-collapse: collapse !important;
+    border-collapse: collapse ;
   }
   .table td,
   .table th {
-    background-color: #fff !important;
+    background-color: #fff ;
   }
   .table-bordered th,
   .table-bordered td {
-    border: 1px solid #ddd !important;
+    border: 1px solid #ddd ;
   }
 }
 @font-face {
@@ -4275,10 +4275,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     box-shadow: none;
   }
   .navbar-collapse.collapse {
-    display: block !important;
-    height: auto !important;
+    display: block ;
+    height: auto ;
     padding-bottom: 0;
-    overflow: visible !important;
+    overflow: visible ;
   }
   .navbar-collapse.in {
     overflow-y: visible;
@@ -4558,10 +4558,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar-left {
-    float: left !important;
+    float: left ;
   }
   .navbar-right {
-    float: right !important;
+    float: right ;
     margin-right: -15px;
   }
   .navbar-right ~ .navbar-right {
@@ -6594,16 +6594,16 @@ button.close {
   margin-left: auto;
 }
 .pull-right {
-  float: right !important;
+  float: right ;
 }
 .pull-left {
-  float: left !important;
+  float: left ;
 }
 .hide {
-  display: none !important;
+  display: none ;
 }
 .show {
-  display: block !important;
+  display: block ;
 }
 .invisible {
   visibility: hidden;
@@ -6616,7 +6616,7 @@ button.close {
   border: 0;
 }
 .hidden {
-  display: none !important;
+  display: none ;
 }
 .affix {
   position: fixed;
@@ -6628,7 +6628,7 @@ button.close {
 .visible-sm,
 .visible-md,
 .visible-lg {
-  display: none !important;
+  display: none ;
 }
 .visible-xs-block,
 .visible-xs-inline,
@@ -6642,193 +6642,193 @@ button.close {
 .visible-lg-block,
 .visible-lg-inline,
 .visible-lg-inline-block {
-  display: none !important;
+  display: none ;
 }
 @media (max-width: 767px) {
   .visible-xs {
-    display: block !important;
+    display: block ;
   }
   table.visible-xs {
-    display: table !important;
+    display: table ;
   }
   tr.visible-xs {
-    display: table-row !important;
+    display: table-row ;
   }
   th.visible-xs,
   td.visible-xs {
-    display: table-cell !important;
+    display: table-cell ;
   }
 }
 @media (max-width: 767px) {
   .visible-xs-block {
-    display: block !important;
+    display: block ;
   }
 }
 @media (max-width: 767px) {
   .visible-xs-inline {
-    display: inline !important;
+    display: inline ;
   }
 }
 @media (max-width: 767px) {
   .visible-xs-inline-block {
-    display: inline-block !important;
+    display: inline-block ;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .visible-sm {
-    display: block !important;
+    display: block ;
   }
   table.visible-sm {
-    display: table !important;
+    display: table ;
   }
   tr.visible-sm {
-    display: table-row !important;
+    display: table-row ;
   }
   th.visible-sm,
   td.visible-sm {
-    display: table-cell !important;
+    display: table-cell ;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .visible-sm-block {
-    display: block !important;
+    display: block ;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .visible-sm-inline {
-    display: inline !important;
+    display: inline ;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .visible-sm-inline-block {
-    display: inline-block !important;
+    display: inline-block ;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .visible-md {
-    display: block !important;
+    display: block ;
   }
   table.visible-md {
-    display: table !important;
+    display: table ;
   }
   tr.visible-md {
-    display: table-row !important;
+    display: table-row ;
   }
   th.visible-md,
   td.visible-md {
-    display: table-cell !important;
+    display: table-cell ;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .visible-md-block {
-    display: block !important;
+    display: block ;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .visible-md-inline {
-    display: inline !important;
+    display: inline ;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .visible-md-inline-block {
-    display: inline-block !important;
+    display: inline-block ;
   }
 }
 @media (min-width: 1200px) {
   .visible-lg {
-    display: block !important;
+    display: block ;
   }
   table.visible-lg {
-    display: table !important;
+    display: table ;
   }
   tr.visible-lg {
-    display: table-row !important;
+    display: table-row ;
   }
   th.visible-lg,
   td.visible-lg {
-    display: table-cell !important;
+    display: table-cell ;
   }
 }
 @media (min-width: 1200px) {
   .visible-lg-block {
-    display: block !important;
+    display: block ;
   }
 }
 @media (min-width: 1200px) {
   .visible-lg-inline {
-    display: inline !important;
+    display: inline ;
   }
 }
 @media (min-width: 1200px) {
   .visible-lg-inline-block {
-    display: inline-block !important;
+    display: inline-block ;
   }
 }
 @media (max-width: 767px) {
   .hidden-xs {
-    display: none !important;
+    display: none ;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .hidden-sm {
-    display: none !important;
+    display: none ;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .hidden-md {
-    display: none !important;
+    display: none ;
   }
 }
 @media (min-width: 1200px) {
   .hidden-lg {
-    display: none !important;
+    display: none ;
   }
 }
 .visible-print {
-  display: none !important;
+  display: none ;
 }
 @media print {
   .visible-print {
-    display: block !important;
+    display: block ;
   }
   table.visible-print {
-    display: table !important;
+    display: table ;
   }
   tr.visible-print {
-    display: table-row !important;
+    display: table-row ;
   }
   th.visible-print,
   td.visible-print {
-    display: table-cell !important;
+    display: table-cell ;
   }
 }
 .visible-print-block {
-  display: none !important;
+  display: none ;
 }
 @media print {
   .visible-print-block {
-    display: block !important;
+    display: block ;
   }
 }
 .visible-print-inline {
-  display: none !important;
+  display: none ;
 }
 @media print {
   .visible-print-inline {
-    display: inline !important;
+    display: inline ;
   }
 }
 .visible-print-inline-block {
-  display: none !important;
+  display: none ;
 }
 @media print {
   .visible-print-inline-block {
-    display: inline-block !important;
+    display: inline-block ;
   }
 }
 @media print {
   .hidden-print {
-    display: none !important;
+    display: none ;
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
