--- a/Views/User/Dangnhap.cshtml
+++ b/Views/User/Dangnhap.cshtml
@@ -4,48 +4,56 @@
     ViewBag.Title = "Dangnhap";
 }
 
-<h2 style="color: #708090; font-family: Arial, sans-serif; font-size: 25px; text-align: center;">Hãy đăng nhập để sử dụng đầy đủ tính năng của Website</h2>
+@section Styles {
+    <link href="@Url.Content("~/Scripts/CSS/LoginStyles.css")" rel="stylesheet" type="text/css" />
+}
 
-@if(ViewBag.Chophep != false)
-{
-    using (Html.BeginForm("Dangnhap", "User", FormMethod.Post, new { @class = "form-horizontal" }))
-    {
-        @Html.AntiForgeryToken()
-        <div class="form-horizontal" style="max-width: 600px; margin: auto;">
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.userMail, htmlAttributes: new { @class = "control-label col-md-2", style = "color: #495057; font-family: Arial, sans-serif; font-size: 16px;" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.userMail, new { htmlAttributes = new { @class = "form-control", style = "font-family: Arial, sans-serif; font-size: 16px;" } })
-                    @Html.ValidationMessageFor(model => model.userMail, "", new { @class = "text-danger", style = "color: #dc3545; font-family: Arial, sans-serif; font-size: 14px;" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2", style = "color: #495057; font-family: Arial, sans-serif; font-size: 16px;" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.password, new { htmlAttributes = new { type = "Password", @class = "form-control", style = "font-family: Arial, sans-serif; font-size: 16px;" } })
-                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger", style = "color: #dc3545; font-family: Arial, sans-serif; font-size: 14px;" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Đăng nhập" class="btn btn-primary" style="font-family: Arial, sans-serif; font-size: 16px;" />
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    @Html.ActionLink("Chưa có tài khoản? Đăng ký ngay", "Dangky", "User", new { @class = "btn btn-link", style = "color: #007bff; font-family: Arial, sans-serif; font-size: 16px;" })
-                </div>
-            </div>
+<section class="login-section">
+    <div class="container">
+        <div class="login-form-wrapper">
+            <h2 class="login-title">Đăng Nhập Tài Khoản</h2>
+
+            @if (ViewBag.Chophep != false)
+            {
+                using (Html.BeginForm("Dangnhap", "User", FormMethod.Post, new { @class = "form-horizontal" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="form-horizontal">
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.userMail, htmlAttributes: new { @class = "control-label col-md-3 col-sm-12" })
+                            <div class="col-md-9 col-sm-12">
+                                @Html.EditorFor(model => model.userMail, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.userMail, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-3 col-sm-12" })
+                            <div class="col-md-9 col-sm-12">
+                                @Html.EditorFor(model => model.password, new { htmlAttributes = new { type = "Password", @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-12 text-center">
+                                <!-- Center the button -->
+                                <input type="submit" value="Đăng nhập" class="btn btn-primary login-btn" />
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-12 text-center">
+                                <!-- Center the link -->
+                                @Html.ActionLink("Chưa có tài khoản? Đăng ký ngay", "Dangky", "User", new { @class = "btn btn-link register-link" })
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+            else
+            {
+                <div class="text-danger text-center">@ViewBag.Fail</div>
+            }
         </div>
-    }
-}
-else
-{
-
-    @ViewBag.Fail
-
-}
-
-
+    </div>
+</section>
