--- a/Scripts/CSS/AboutStyles.css
+++ b/Scripts/CSS/AboutStyles.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center; /* Center the form vertically */
     justify-content: center; /* Center the form horizontally */
-    padding: 50px 0;
+    padding: 50px ;
     width: 100%;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
