--- a/Views/GioHang/GioHang.cshtml
+++ b/Views/GioHang/GioHang.cshtml
@@ -52,11 +52,13 @@
             {
                 <input type="submit" value="Đặt hàng COD" class="btn-danger" />
             }
-        <form action="/GioHang/DatHangVNPay" method="post">
-            <input type="submit" value="Đặt hàng Vnpay" class="btn-primary" />
-        </form>
-           
-        </td>   
+            <form action="/GioHang/DatHangOnline" method="post">
+                <input type="submit" value="Đặt hàng Vnpay" class="btn-primary" />
+            </form>
+            <form action="/GioHang/PaymentWithPaypal" method="post">
+                <input type="submit" value="Đặt hàng Paypal" class="btn-primary" />
+            </form>
+        </td>
     </tr>
 </table>
 
